--- a/dapp/index.html
+++ b/dapp/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet/less" type="text/css" href="./public/styles/style.less" />
     <script src="https://cdn.jsdelivr.net/npm/less@4" ></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
   </head>
@@ -140,6 +141,7 @@
       </div>
     </div>
     <script type="text/javascript" src="./public/scripts/wallet-interaction.js"></script>
+    <script type="text/javascript" src="./public/scripts/ether-service.js"></script>
     <script type="text/javascript" src="./public/scripts/main.js"></script>
   </body>
 </html>
