--- a/dapp/index.html
+++ b/dapp/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="col-6 section">
           <h3 class="section-title">Buy/Sell</h3>
-          <div class="section-content section-vertical">
+          <div class="section-content section-vertical" id="nft-selected">
             
           </div>
         </div>
