--- a/dapp/index.html
+++ b/dapp/index.html
@@ -106,6 +106,7 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="./public/artifacts/Marketplace.js"></script>
     <script type="text/javascript" src="./public/scripts/constant.js"></script>
     <script type="text/javascript" src="./public/scripts/wallet-interaction.js"></script>
     <script type="text/javascript" src="./public/scripts/ether-service.js"></script>
